--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,23 @@
 aiofiles==0.7.0
+appdirs==1.4.4
+cfgv==3.3.0
 click==8.0.1
+distlib==0.3.2
+filelock==3.0.12
 httptools==0.2.0
+identify==2.2.9
 multidict==5.1.0
+nodeenv==1.6.0
 pip==20.2.3
-pydantic==1.8.2
+pre-commit==2.13.0
 PyYAML==5.4.1
 sanic==21.3.4
 sanic-openapi==21.3.2
 sanic-routing==0.6.2
 setuptools==49.2.1
-starlette==0.14.2
-typing-extensions==3.10.0.0
+six==1.16.0
+toml==0.10.2
 ujson==4.0.2
 uvloop==0.15.2
+virtualenv==20.4.7
 websockets==8.1
